added time frame filtering to proposals/drafts

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Don't track content of these folders
 node_modules/
-server/fileServer/
+server/fileServer/bomFiles/
+server/fileServer/packingFiles/
+server/fileServer/proposalFiles/
 server/pdfmake/
